apt-upchk (22) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Tatsuki Sugiura <sugi@nemui.org>  Thu, 13 Oct 2005 18:11:08 +0900

apt-upchk (21) stable; urgency=low

  * Small bugfix for perl 5.8.4 on sarge.
  * Version 20 has been completely broken. Do not use!

 -- Tatsuki Sugiura <sugi@nemui.org>  Thu, 13 Oct 2005 18:08:25 +0900

apt-upchk (20) stable; urgency=low

  * add ignore and suppress feature.
  * exclude-byname has been obsolute.

 -- Tatsuki Sugiura <sugi@nemui.org>  Wed, 12 Oct 2005 13:59:07 +0900

apt-upchk (19) stable; urgency=low

  * report: bug fix in --mail option handling.

 -- Tatsuki Sugiura <sugi@nemui.org>  Thu, 14 Jul 2005 12:25:47 +0900

apt-upchk (18) stable; urgency=low

  * upchk: fix version scanner for native package.

 -- Tatsuki Sugiura <sugi@nemui.org>  Thu,  7 Apr 2005 06:12:44 +0900

apt-upchk (17) stable; urgency=low

  * fix broken regxp...

 -- Tatsuki Sugiura <sugi@nemui.org>  Wed, 23 Mar 2005 12:30:46 +0900

apt-upchk (16) stable; urgency=low

  * small fix in getting new version of hold packages
  * fix typo

 -- Tatsuki Sugiura <sugi@nemui.org>  Wed, 23 Mar 2005 04:08:08 +0900

apt-upchk (15) stable; urgency=low

  * upchk: fix for perl5.6

 -- Tatsuki Sugiura <sugi@nemui.org>  Mon,  7 Feb 2005 18:43:07 +0900

apt-upchk (14) stable; urgency=low

  * purge XML interface, dependency of libxml-* has been removed.
  * report: add option; --format yaml
  * upchk: uses cache for 10min.

 -- Tatsuki Sugiura <sugi@nemui.org>  Mon,  7 Feb 2005 03:31:38 +0900

apt-upchk (13) stable; urgency=low

  * upchk: new version info for hold packages

 -- Tatsuki Sugiura <sugi@nemui.org>  Tue,  4 Jan 2005 16:06:40 +0900

apt-upchk (12) stable; urgency=low

  * report: bug fix; normal update was allways ignored
  * report: all entries of config file will be through 

 -- Tatsuki Sugiura <sugi@nemui.org>  Thu, 25 Nov 2004 11:58:37 +0900

apt-upchk (11) stable; urgency=low

  * report script supports --mail option 