@@ -1,8 +1,9 @@
 apt-upchk (22) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * upchk: fix in getting version of hold packages
 
- -- Tatsuki Sugiura <sugi@nemui.org>  Thu, 13 Oct 2005 18:11:08 +0900
+ -- Tatsuki Sugiura <sugi@nemui.org>  Tue, 25 Oct 2005 14:22:32 +0900
 
 apt-upchk (21) stable; urgency=low
 
